# kerygma-pipeline

./: AGENTS.md  CLAUDE.md  GEMINI.md  kerygma_config.example.yaml  kerygma_pipeline.py  pyproject.toml  seed.yaml
.github/workflows/: ci.yml
tests/: test_backfill.py  test_e2e_dry_run.py  test_pipeline_integration.py  test_profile_dispatch.py  test_report_generator_integration.py  test_scheduler_integration.py
